--- a/package.json
+++ b/package.json
@@ -16,15 +16,15 @@
   "dependencies": {
     "@tradle/bitcoinjs-lib": "^1.5.7",
     "async": "^0.9.0",
+    "object-assign": "^4.0.1",
     "superagent": "^1.2.0",
     "throttleme": "^1.0.3"
   },
   "devDependencies": {
-    "cb-tester":  "^0.2.x",
-    "coveralls":  "^2.11.2",
-    "istanbul":   "^0.3.8",
-    "mocha":      "^2.2.0",
-    "mockery":    "^1.4.0"
+    "cb-tester": "^0.2.x",
+    "coveralls": "^2.11.2",
+    "istanbul": "^0.3.8",
+    "mocha": "^2.2.0",
+    "mockery": "^1.4.0"
   }
 }
-
